# WitnessAi

./: .env  .env.example  .gitignore  README.md  config.py  conftest.py  install_py.sh  main.py  pyproject.toml  railway.json  requirements.txt  run_tests.py  setup.sh
api/: main.py  websocket.py
api/routes/: agents.py  dashboard.py  feeds.py  health.py  incidents.py
core/: agent.py  anomaly_engine.py  camera_manager.py  correlator.py  frame_processor.py  incident_manager.py  narrative_engine.py
dashboard/: index.html  talk.html
detection/: anomaly.py  detector.py  tracker.py
evidence/: buffer.py  packager.py
integration/: witness_processor.py
models/: enums.py  schemas.py  schemas.py.bak
narration/: narrator.py
tests/: conftest.py  test_agent.py  test_all.py  test_anomaly.py  test_anomaly_engine.py  test_api.py  test_buffer.py  test_correlator.py  test_detector.py  test_frame_processor.py  test_incident_manager.py  test_integration.py  test_narrative_engine.py  test_narrator.py  test_packager.py  test_schemas.py  test_tracker.py
utils/: buffer.py  ffmpeg.py  report_generator.py
